--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,14 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [
+                        "room.schemaLocation": "$projectDir/schemas".toString(),
+                        "room.incremental"   : "true"]
+            }
+        }
     }
     buildTypes {
         release {
@@ -43,8 +51,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.4.1'
 
     //rx java and android
-    implementation 'io.reactivex.rxjava2:rxjava:2.0.2'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.4'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
 
     //dagger
@@ -52,6 +60,9 @@ dependencies {
     annotationProcessor 'com.google.dagger:dagger-compiler:2.17'
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.17'
 
-
+    //room - 2.2.0-alpha01 // 2.1.0
+    implementation "androidx.room:room-runtime:2.1.0"
+    annotationProcessor "androidx.room:room-compiler:2.1.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.0.0"
 
 }
